feat: collection mapper introduced (#13)
 - Offloaded custom logic to collection voucher mapper from collection voucher service
 - Added request validation with jakarka
 - GSON dependency removed
 - Minor contract changes for pending-bill / collection voucher
---------

Signed-off-by: Rajdeep Roy Chowdhury <rrajdeeproychowdhury@gmail.com>